# rover-lang

./: .clang-format  CMakeLists.txt  README.md  grammar.txt  main.cpp
.github/workflows/: check_format.yml  tests.yml
src/: main.cpp
src/interpreter/: CMakeLists.txt  context.cpp  context.h  interpreter.cpp  interpreter.h  value.h
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.h  token.cpp  token.h
src/parser/: CMakeLists.txt  ast.cpp  ast.h  ast_printer.cpp  ast_printer.h  parser.cpp  parser.h
test/: lexer_test.cpp
test_code/: arrays.🚲  hello.🚲  simple.🚲  variables.🚲
